--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
+.game{
+    text-align: center;
+}
+.grid{
+    display: inline-block;
+}
+
+.controls{
+    margin-top: 5px;
+}
+
 .box {
     height: 20px;
     width: 20px;
